src/style.css
:root {
    --primary-colour: #202231;
    --secondary-colour: #E5E7E6;
    --tertiary-colour: #FB3640;
    --quarternary-colour: #EE6C4D;
    --background-colour: #181A25;
    --heading-colour: #EF233C;
    /*
    --primary-colour: #202231;
    --secondary-colour: #E5E7E6;
    --tertiary-colour: #A9FBD7;
    --quarternary-colour: #20A39E;
    --background-colour: #181A25;
    --heading-colour: #50E2D4

    --primary-colour: #343434;
    --secondary-colour: #FEFFFE;
    --tertiary-colour: #595959;
    --quarternary-colour: #EE6C4D;
    --background-colour: #FBFBFF;
    --heading-colour: #EF233C;
    */
}

h1, h2, h3, h4, h5, h6 {
    font-family: "Nunito", serif;
}

p {
    font-size: 1rem;
}

label {
    color: var(--heading-colour);
}

main {
    display: flex;
    justify-content: center;
    align-items: center;
    flex: 1 1 85vh;
    /*
    padding-left: 12.5vw;
    padding-right: 12.5vw;
    */
}

main, footer {
    background-color: var(--background-colour);
}


p {
    color: var(--secondary-colour);
}

#skills-div {
    width: 100%;
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
}

.container {
    display: flex;
    flex-flow: column;
}

.portfolio-project {
    display: flex;
    flex-flow: column;
    align-items: center;
    margin-left: 2rem;
    margin-right: 2rem;
}

.project-preview {
    height: 30vh;
    width: auto;
}

#title-link {
    margin-left: auto;
    margin-right: 1rem;
}

.project-block {
    display: flex;
    border: solid 1px var(--tertiary-colour);
    margin-bottom: 2rem;
    padding: 0% 5% 0% 5%;
}

.project-block:hover {
    box-shadow: 0 0.5em 0.5em -0.4em var(--quarternary-colour);
    transform: translateY(-0.1em);
}

.project-preview-div {
    height: 40vh;
    width: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.cv-section li {
    list-style-type: square;
    margin-top: 0.3rem;
    margin-bottom: 0.3rem;
}

.project-summary {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    width: 50%;
}

.project-info {
    display: flex;
}

.project-page {
    display: flex;
    justify-content: space-between;
}

.projects {
    display: flex;
    flex-flow: column;
    justify-content: center;
}

.skills {
    width: 40%;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.skill {
    border: 1px solid var(--secondary-colour);
    width: 25%;
    margin-left: 0.3rem;
    margin-right: 0.3rem;
    margin-top: 0.3rem;
    margin-bottom: 0.3rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    height: auto;

}

.about-div {
    width: 50%;
}

.navbar {
    background-color: var(--primary-colour);
    height: 100%;
}

.year-papers h3 {
    color: var(--heading-colour);
}

body {
    display: flex;
    justify-content: flex-start;
    flex-direction: column;
    font-family: "Oxygen", sans-serif;
    margin: 0 0 0 0;
}

header {
    flex: 0 0 10vh;
    height: 10%;
    background-color: var(--primary-colour);
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.mini-portrait {
    background-image: url("../public/images/NealPhoto.jpg");
    height: auto;
    background-size: 3rem 3rem;
    border-radius: 50%;
    height: 3rem;
    width: 3rem;
}

#title-portrait{
    margin-right: 0;
}

.research {
    margin-top: 2rem;
}

.year-block {
    border-top: solid var(--heading-colour);
    display: flex;
    justify-content: space-between;
    display: flex;
}

#block2017 {
    border-bottom: solid var(--heading-colour);
}

#paper-8 {
    border-bottom: none;
}

footer {
    flex: 0 0 5vh;
    color: var(--quarternary-colour);
    text-align: center;
    display: flex;
}


h1 {
    margin-left: 10px;
    margin-right: 10px;
    color: var(--heading-colour);
    align-self: flex-end;
    width: auto;
    text-align: center;
}

h2 {
    color: var(--heading-colour);
}

.projects h3 {
    color: var(--heading-colour)
}

.section-heading {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-right: 2rem;
}

input {
    width: 100%;
}

#comment {
    height: 5rem;
}

#paper-4, #paper-7 {
    border-bottom: solid 1px var(--quarternary-colour);
}

nav {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    background-color: var(--primary-colour);
    height: 80%;
}

nav ul{
    display: flex;
    justify-content: flex-start;
    list-style-type: none;
    height: 66%;
    align-items: center;
    width: 100%;
    margin-left: 20vw;
    margin-right: 20vw;
    padding: 0;
}

nav li {
    border-width: 2px;
    border-color: var(--quarternary-colour);
    margin-right: 2vw;
    display: flex;
    align-items: center;
    border-radius: 10%;
    height: 3rem;
}

em {
    color: var(--quarternary-colour);
}

a {
    text-decoration: none;
    color: var(--heading-colour);
}

ul {
    list-style-type: none;
    padding: 0;
}

.about-text {
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    text-align: center;
}

.title {
    margin-top: 5px;
    margin-bottom: 5px;
    margin-right: .5vw;
    width: 15vw;
    display: flex;
    justify-content: center;
}

.content {
    margin-left: 20px;
    font-family: "Oxygen", sans-serif;
    color: var(--secondary-colour);
    height: 100%;
}

.portrait {
    margin-top: 2.5%;
    margin-bottom: 2.5%;
    height: 25vh;
    width: auto;
    border-radius: 50%;
    margin-right: 5vw;
}

#skill-div {
    display: flex;
    justify-content: space-between;
}

.skills p {
    width: 75%;
}

.profile {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: space-between;
    height: 60vh;
    align-self: flex-start;
}

nav h1 {
    color: var(--secondary-colour);
}

.nav-link:hover {
    box-shadow: 0 0.5em 0.5em -0.4em var(--heading-colour);
    transform: translateY(-0.1em);
}

.link-active {
    color: var(--quarternary-colour);
    font-weight: 700;
}

.link-active:hover {
    box-shadow: 0 0.5em 0.5em -0.4em var(--quarternary-colour);
    transform: translateY(-0.1em);
}

.social-media-icon {
    height: 1rem;
    width: 1rem;
    margin-right: 5px;
}

.contact {
    display: flex;
    justify-content: space-around;
    padding-left: 0;
}

.section-link:hover {
    box-shadow: 0 0.5em 0.5em -0.4em var(--secondary-colour);
    transform: translateY(-0.1em);
    color: var(--quarternary-colour);
}

li {
    color: var(--heading-colour);
}

#about-content {
    display: flex;
    align-items: center;
    
}


h3 {
    color: var(--heading-colour);
}

h4 {
    color: var(--tertiary-colour);
    text-align: center;
}

h5 {
    color: var(--tertiary-colour);
}

#contact a {
    color: var(--secondary-colour);
}

.social-media-icon {
    filter: invert(42%) sepia(91%) saturate(1911%) hue-rotate(151deg) brightness(98%) contrast(101%);
}

#profile-content {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
}

.project {
    margin: 2.5% 2.5% 2.5% 2.5%;
}

.contact li {
    margin-left: 1%;
    margin-right: 1%;
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
}

.project h3 {
    font-size: 4rem;
    text-align: center;
}

@media only screen and (max-width: 800px) {
    .content {
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    article {    
        grid-template-rows: 0.1fr 0.1fr 0.1fr 0.1fr 0.1fr;
    }

    nav ul {
        display: flex;
        justify-content: center;
        height: 66%;
        align-items: center;
        width: 50%;
        padding: 0;    
    }

    .navbar-links {
        display: none;
    }

    .hamburger {
        display: flex;
        justify-content: center;
        align-items: center;
        background-color: var(--background-colour);
    }

    .page-link {
        font-size: 2rem;
        margin-top: 0.5rem;
        margin-bottom: 0.5rem;
    }
    
    #burger-list {
        display: flex;
        flex-direction: column;
        align-items: center;
    }
    .cv-section {
        display: flex;
        flex-direction: column;
    }

    .section-heading {
        border-right: none;
    }

    .inner-block {
        align-items: center;
        justify-content: center;
    }

    .cv-div {
        width: 100%;
    }
    
    .project-block {
        flex-direction: column;
    }

    .project-info {
        display: flex;
        flex-direction: column;
    }

    .project-details {
        display: flex;
        margin-left: none;
        justify-content: center;
        align-items: center;
    }

    #about-content {
        flex-direction: column-reverse;
    }

    #skills-div {
        flex-direction: column;
        align-items: center;
        flex-direction: center;
    }

    .skill {
        width: 50%;
    }

    section {
        margin-left: 5vw;
        margin-right: 5vw;
    }

    footer {
        flex-direction: column;
        align-items: center;
        justify-content: center;
    }
}

.year-block .section-heading {
    width: 10%;
}

.year-papers {
    width: 90%;
}

#hamburger-icon {
    margin-left: 0.25rem;
    margin-right: 0.25rem;
    margin-bottom: 1rem;
    margin-top: 1rem;
}

@media (min-width: 801px) {
    .hamburger {
        display: none;
    }

    .section-heading {
        width: 25%;
        border-right: solid 1px var(--heading-colour);
    }

    .inner-block {
        align-items: flex-start;
    }

    .cv-div {
        width: 70%;
    }

    .project-details {
        margin-left: 2rem;
    }

    section {
        margin-left: 20vw;
        margin-right: 20vw;
    }

    #burger-links {
        display: none;
    }

    footer p {
        margin-bottom: 0.25rem;
        margin-top: 0.25rem;
        margin-left: 25vw;
        margin-right: auto;
    }
    
    .icon {
        margin-bottom: 0.25rem;
        margin-top: 0.25rem;
    }
    
    .icon-div {
        margin-right: 25vw;
        margin-left: auto;
    }

    footer {
        justify-content: center;
        align-items: center;
        flex-direction: row;
        gap: 0px;
        height: 5%;    
    }
    
}


#contact-text p {
    text-align: center;
}

.section-heading {
    display: flex;
    justify-content: center;
}

#profile-description h1 {
    font-size: 2rem;
}

.visible-burger {
    display: flex;
    flex-direction: column;
    background-color: var(--primary-colour);
}

.invisible-burger {
    display: none;
}

.hidden-nav {
    display: none;
}

.icon {
    filter: invert(24%) sepia(88%) saturate(1946%) hue-rotate(337deg) brightness(110%) contrast(97%);
    height: 1.5rem;
    width: auto;
    margin-left: 0.25rem;
    margin-right: 0.25rem;
    margin-bottom: 1rem;
}

.cv-area {
    display: flex;
    flex-direction: column;
}

.cv-section {
    display: flex;
    width: 100%;
}

.cv-div {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
}

.cv-area li {
    color: var(--secondary-colour);
}



.inner-block {
    border-bottom: solid 1px var(--quarternary-colour);
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.inner-block > * {
    margin-top: 0.25rem;
    margin-bottom: 0.25rem;
}

.inner-block h4 {
    color: var(--quarternary-colour);
}

.cv-section {
    border-bottom: solid 1px var(--tertiary-colour);
}

#skills-section {
    border-top: solid 1px var(--tertiary-colour);
}

#project-2, #exp-3, #ed-4 {
    border-bottom: none;
}

.project-image {
    height: 50vh;
    width: auto;
}

.project-details {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.project-image-div {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.contact-option {
    color: var(--quarternary-colour);
}

